# mcts-mcp-server

./: .env.example  .gitignore  ANALYSIS_TOOLS.md  QUICK_START.md  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  run_test.py  setup.py  setup.sh  setup_analysis.sh  setup_analysis_venv.sh  setup_unix.sh  setup_windows.bat  test_adapter.py  test_server.py  test_simple.py  verify_installation.py
archive/: First-Run.md  GEMINI_SETUP.md  QUICK_START_FIXED.md  README.md  SERVER_FIX_SUMMARY.md  SETUP_SUMMARY.md  TIMEOUT_FIX.md  fixed_tools.py  gemini_adapter.py  setup_analysis.sh  setup_analysis_venv.sh  test_adapter.py  test_fixed_server.py  test_gemini_setup.py  test_mcp_init.py  test_minimal.py  test_new_adapters.py  test_ollama.py  test_rate_limiting.py  test_server.py  test_server_debug.py  test_startup.py  test_startup_simple.py  tools_fast.py  tools_original.py
prompts/: README.md  usage_guide.md
results/cogito:32b/cogito:32b_1745989705/: best_solution.txt  progress.jsonl
results/cogito:latest/cogito:latest_1745979984/: best_solution.txt  progress.jsonl
results/cogito:latest/cogito:latest_1745984274/: best_solution.txt  progress.jsonl
results/local/local_1745956311/: progress.jsonl
results/local/local_1745956673/: progress.jsonl
results/local/local_1745958556/: progress.jsonl
results/qwen3:0.6b/qwen3:0.6b_1745960624/: best_solution.txt  progress.jsonl
results/qwen3:0.6b/qwen3:0.6b_1745960651/: progress.jsonl
results/qwen3:0.6b/qwen3:0.6b_1745960694/: progress.jsonl
results/qwen3:0.6b/qwen3:0.6b_1745977462/: best_solution.txt  progress.jsonl
src/mcts_mcp_server/: __init__.py  anthropic_adapter.py  base_llm_adapter.py  fixed_tools.py  gemini_adapter.py  gemini_adapter_old.py  intent_handler.py  llm_adapter.py  llm_interface.py  manage_server.py  mcts_config.py  mcts_core.py  node.py  ollama_adapter.py  ollama_check.py  ollama_utils.py  openai_adapter.py  rate_limiter.py  reality_warps_adapter.py  results_collector.py  server.py  state_manager.py  test_new_adapters.py  tools.py  tools.py.update  tools_old.py  utils.py
src/mcts_mcp_server/analysis_tools/: __init__.py  mcts_tools.py  results_processor.py
