[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcts-mcp-server"
version = "0.1.0" # Initial version
description = "An MCP server exposing an Advanced Bayesian Monte Carlo Tree Search engine."
authors = [
    { name = "Your Name/AI Agent", email = "you@example.com" }, # Placeholder
]
requires-python = ">=3.10"
license = { text = "MIT" } # Assuming MIT from README
readme = "README.md"

dependencies = [
    "mcp[cli]>=1.2.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "ollama",
    "httpx",
    "python-dotenv",
    "openai",
    "anthropic",
    "fastmcp>=2.8.0",
    "google-genai>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "unittest-xml-reporting", # Example, if needed for CI or specific test outputs
    "ruff", # Example linter/formatter
]

[project.scripts]
mcts-mcp-server = "mcts_mcp_server.server:main"
mcts_mcp_server = "mcts_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv] # Placeholder for any uv specific configurations if needed in future
# Example:
# workspace = "."
# default-toolchain = "3.10"
